feat: added basic gmail boilerplate

--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,13 @@
         <artifactId>google-http-client-gson</artifactId>
         <version>1.34.2</version> <!-- Check for the latest version -->
     </dependency>
+      <!-- https://mvnrepository.com/artifact/com.google.auth/google-auth-library-oauth2-http -->
+    <dependency>
+        <groupId>com.google.auth</groupId>
+        <artifactId>google-auth-library-oauth2-http</artifactId>
+        <version>1.27.0</version>
+    </dependency>
+
 
 
     <dependency>
