--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,11 @@
 			<artifactId>junit-jupiter-params</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>io.github.stefanbratanov</groupId>
+			<artifactId>jvm-openai</artifactId>
+			<version>0.11.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
