--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=Daily Java Tips
 server.port=${PORT:8080}
 spring.data.mongodb.uri=${MONGODB_URL}
 spring.data.mongodb.database=${MONGODB_NAME}
+openai.api.key=${OPENAI_API_KEY}
