feat: Completed cron job endpoint
- Able to post to endpoint and send an email to mailing list!

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ server.port=${PORT:8080}
 spring.data.mongodb.uri=${MONGODB_URL}
 spring.data.mongodb.database=${MONGODB_NAME}
 openai.api.key=${OPENAI_API_KEY}
+gcp.auth.token=${GCP_AUTH_TOKEN}
