feat: removed Gmail API dependency
- Cannot afford service account to use for email scheduling. :'(

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.data.mongodb.uri=${MONGODB_URL}
 spring.data.mongodb.database=${MONGODB_NAME}
 openai.api.key=${OPENAI_API_KEY}
 gcp.auth.token=${GCP_AUTH_TOKEN}
+gmail.user=${GMAIL_USER}
+gmail.token=${GMAIL_TOKEN}
